<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout"
    tools:context=".AttendanceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:id="@+id/user_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/employee_name"
            android:textColorHint="@color/secondary_text"
            android:id="@+id/emp_name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColorHint="@color/secondary_text"
            android:hint="@string/emp_id"
            android:id="@+id/emp_id"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/secondary_text"
            android:hint="@string/emp_position"
            android:gravity="center"
            android:id="@+id/emp_position"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:hint="@string/date_amp_time"
            android:textColorHint="@color/secondary_text"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/dateandtime"/>

        <TextView
            android:id="@+id/starea"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:layout_marginStart="75dp"
            android:hint="@string/checkin_area"
            android:textColorHint="@color/secondary_text"
            android:gravity="center"
            android:padding="10sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginLeft="75dp" />

        <TextView
            android:id="@+id/stlat"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:layout_marginStart="75dp"
            android:hint="@string/checkin_area"
            android:visibility="gone"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:padding="10sp"
            android:textColor="@color/black"
            android:layout_marginLeft="75dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="75dp"
            android:hint="Checked In Time"
            android:visibility="gone"
            android:textColorHint="@color/secondary_text"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginLeft="75dp"
            android:id="@+id/ctime"/>


        <Button
            android:id="@+id/check_in"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/submit_button"
            android:layout_marginStart="75dp"
            android:text="@string/check_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="75dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="350dp"-->
<!--        android:padding="15dp">-->



<!--    </RelativeLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->



<!--    </LinearLayout>-->

</androidx.drawerlayout.widget.DrawerLayout>